--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@
   margin-top: 20px;
 }
 
-.pagination li {
+/* .pagination li {
   margin: 0 5px;
   cursor: pointer;
   padding: 5px 10px;
@@ -47,4 +47,4 @@
 .pagination li.active {
   background-color: #007bff;
   color: #fff;
-}
+} */
